# career-compass-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  main.py  main.py.backup
app/components/: __init__.py  dashboard.py
app/pages/: analysis.py
app/utils/: __init__.py  helpers.py
config/: __init__.py  settings.py
docs/: API.md
notebooks/exploratory/: 01_initial_analysis.ipynb
notebooks/exploratory/data/raw/: jobs_20260208_051810.json
src/: __init__.py
src/analytics/: __init__.py  career_transition.py  market_intelligence.py  roi_calculator.py
src/career_compass.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: __init__.py  collector.py  github_jobs.py  job_scraper.py  professional_scraper.py  quality_checker.py  real_collector.py
src/database/: models.py
src/features/: __init__.py  advanced_ontology.py  skill_extractor.py
src/models/: forecasting.py
tests/: test_data_collection.py  test_skill_extractor.py
