[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "career-compass"
version = "0.1.0"
authors = [{name = "Your Name", email = "your.email@example.com"}]
description = "AI-powered skill gap analysis with market forecasting"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "jupyter>=1.0.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.5.0",
    "jupyterlab>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/career-compass-ai"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/career-compass-ai/issues"